Revision history for WebService-Shippo
 
{{$NEXT}}
    - The CarrierAccount "active" and "production" mutators have been
      replaced with "activate", "deactivate", "enable_test_mode" and
      "disable_test_mode" methods.
    - Exports boolean exports on request or via the ':bool' tag
0.0.10    2015-10-25 19:56:30+00:00 Europe/London
    - Basic Authorization added.
    - Numerous doc and test change.
    - Had to remove Try::Tiny because it was giving grief under 5.8.8
    - Still having grief with Locale::Currency which works on some Perls
      and not others. If I avoid the really poor public interface with the
      patchy support on earlier and later versions of Perl, and use the 
      private Locale::Codes interface, I only have problems on Perl 5.14.
      Fighting the urge to avoid using it altogether by eliminating the
      dependency and replacing it with something that works properly and
      consistently. Grumble, grumble. Hope it can be fixed. And tested. On
      lots and lots of different Perls. Because that's good. Right?
0.0.9     2015-10-24 23:41:44+01:00 Europe/London
    - A reasonable minimum set of test finished. There can always be more
      tests and there will be in the future. At 96.1% coverage (local), 93%
      (Github), I'm now going to get some documentation done.
0.0.8     2015-10-24 16:16:29+01:00 Europe/London
    - Interim release.
    - Entities with asynchronous work-flows stable.
    - More tests.
    - More refactoring.
0.0.7     2015-10-20 20:00:55+01:00 Europe/London
    - Interim release (no more until the 23rd when I return home).
    - More core tests added for Rate and Shipment entities.
    - Most of the important user-facing methods take blocking callbacks.
    - A metric ton of re-factoring.
    - And a partridge in a pear tree.
0.0.6     2015-10-19 23:34:42+01:00 Europe/London
    - Interim release (reasonably stable)
    - More tests added
    - Lots of re-factoring (particularly of test code)
