@@ -3,8 +3,11 @@ Revision history for WebService-Shippo
 {{$NEXT}}
     - The CarrierAccount "active" and "production" mutators have been
       replaced with "activate", "deactivate", "enable_test_mode" and
-      "disable_test_mode" methods.
-    - Exports boolean exports on request or via the ':bool' tag
+      "enable_production_mode" methods.
+    - The non-OO interface is history; seems a little pointless
+    - We're working with JSON a lot and so too is the client (probably)
+      so the boolean, true, false functions brought in by boolean pragma
+      are exported by default. So is callback.
 0.0.10    2015-10-25 19:56:30+00:00 Europe/London
     - Basic Authorization added.
     - Numerous doc and test change.
